--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -29,7 +29,7 @@
       <div class="w-full">
         <img src="assets/images/image-omelette.jpeg" alt="#" class="object-cover w-full lg:rounded-xl" />
       </div>
-      <div class="p-6">
+      <div class="p-6 lg:p-0">
         <h1 class="text-4xl/9 font-[Young_Serif] mb-6">Simple Omelette Recipe</h1>
         <p class="font-[Outfit] mb-6 text-[hsl(30,10%,34%)]">
           An easy and quick dish, perfect for any meal. This classic omelette
