--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -26,7 +26,7 @@
   </head>
   <body class="lg:flex lg:justify-center lg:items-center lg:bg-[hsl(30,54%,90%)]">
     <section class="lg:w-[70%] lg:my-10 lg:p-8 bg-white lg:rounded-3xl">
-      <div class="w-full">
+      <div class="w-full lg:mb-6">
         <img src="assets/images/image-omelette.jpeg" alt="#" class="object-cover w-full lg:rounded-xl" />
       </div>
       <div class="p-6 lg:p-0">
