--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -28,7 +28,7 @@
     class="bg-[hsl(221,100%,96%)] font-[Hanken_Grotesk] flex items-center justify-center lg:h-screen"
   >
     <div
-      class="bg-white w-full h-full flex flex-col gap-4 lg:w-[46%] lg:h-[60%] lg:flex-row lg:rounded-4xl lg:gap-2"
+      class="bg-white w-full h-full flex flex-col gap-4 lg:w-[730px] lg:h-[450px] lg:flex-row lg:rounded-4xl lg:gap-2 shadow-[0_0_20px_hsl(241,100%,89%,50%),0_10px_20px_hsl(241,100%,89%,50%)]"
     >
       <div
         class="flex flex-col items-center justify-center p-5 rounded-b-4xl bg-linear-to-b from-[hsl(252,100%,67%)] to-[hsl(241,81%,54%)] lg:flex-1 lg:rounded-4xl lg:p-4 lg:justify-start"
